fix: make Menu items wrap correctly, fixes #451 (#482)

--- a/components/menu/index.css
+++ b/components/menu/index.css
@@ -109,13 +109,27 @@ governing permissions and limitations under the License.
   .spectrum-Icon + .spectrum-Menu-itemLabel,
   .spectrum-Menu-itemIcon  + .spectrum-Menu-itemLabel {
     margin-left: var(--spectrum-selectlist-thumbnail-image-padding-x);
+
+    width: calc(
+      100%
+      - var(--spectrum-icon-checkmark-medium-width)
+      - var(--spectrum-selectlist-option-icon-padding-x)
+      - var(--spectrum-selectlist-thumbnail-image-padding-x)
+      - var(--spectrum-alias-workflow-icon-size)
+    );
   }
 }
 
 .spectrum-Menu-itemLabel {
   flex: 1 1 auto;
   line-height: var(--spectrum-selectlist-option-label-line-height);
-  word-break: break-all;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  width: calc(
+    100%
+    - var(--spectrum-icon-checkmark-medium-width)
+    - var(--spectrum-selectlist-option-icon-padding-x)
+  );
 }
 
 .spectrum-Menu-itemLabel--wrapping {
